src/Labs/network-policies/pod-internet/test.yaml
# test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
    - name: test
      image: busybox
      args: ["sleep", "3600"]
