src/Labs/network-policies/pod-internet/deny-egress.yaml
# deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-test-egress
spec:
  podSelector:
    matchLabels:
      app: test
  policyTypes:
    - Egress
  egress: []
